--- a/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
@@ -19,3 +19,11 @@
     owner="{{ file_owner }}"
     group="{{ group_owner }}"
     mode=0644
+
+- name: Apply auth.php
+  template:
+    src=auth.j2
+    dest=/var/www/html
+    owner="{{ file_owner }}"
+    group="{{ group_owner }}"
+    mode=0600
