--- a/emailops-build/roles/build-zimbra/tasks/common/serverconfig.yml
+++ b/emailops-build/roles/build-zimbra/tasks/common/serverconfig.yml
@@ -7,7 +7,7 @@
 ## server config
 ##
 - name: (POSTINSTALL) Apply Zimbra configuration (server config)
-  command: "{{ install_dir }}/bin/zmprov ms {{ hostvars['{{ inventory_hostname }}'] }} \"zimbraLmtpNumThreads 20 zimbraHttpNumThreads 250 zimbraImapNumThreads 600 zimbraPop3NumThreads 600
+  command: "{{ install_dir }}/bin/zmprov ms {{ hostvars[inventory_hostname]['ansible_fqdn'] }} \"zimbraLmtpNumThreads 20 zimbraHttpNumThreads 250 zimbraImapNumThreads 600 zimbraPop3NumThreads 600
     -zimbraLmtpNumThreads 20 -zimbraHttpNumThreads 250 -zimbraImapNumThreads 600 -zimbraPop3NumThreads 600 -zimbraImapMaxRequestSize 200 -zimbraImapMaxConnections 600
     -zimbraHttpDebugHandlerEnabled FALSE -zimbraHttpDebugHandlerEnabled TRUE -zimbraRedoLogDeleteOnRollover FALSE -zimbraRedoLogDeleteOnRollover TRUE\""
   become: yes
