--- a/emailops-build/roles/build-ecelerity/handlers/main.yml
+++ b/emailops-build/roles/build-ecelerity/handlers/main.yml
@@ -8,3 +8,12 @@
 
 - name: sync-puppet
   command: /usr/bin/puppet agent -t
+
+- name: ecelerity-build-complete
+  jabber:
+    user="{{ jabber_user }}"
+    host="{{ jabber_host }}"
+    port="{{ jabber_port }}"
+    password="{{ jabber_pass }}"
+    to="{{ jabber_to }}"
+    msg="{{ build_type }} build complete for {{ client }} on {{ hostvars['{{ inventory_hostname }}'] }}"
