--- a/emailops-build/roles/build-zimbra/tasks/ldap/tasks/multimaster.yml
+++ b/emailops-build/roles/build-zimbra/tasks/ldap/tasks/multimaster.yml
@@ -7,19 +7,20 @@
 ## Set up multi-master replication
 ##
 - name: (POSTINSTALL) Promote node to master
-  command: "{{ install_dir }}/libexec/zmldappromote-replica-mmr -s {{ ldap_rid }}";
+  command: "{{ install_dir }}/libexec/zmldappromote-replica-mmr -s {{ ldap_rid }}"
   become: yes
   become_user: zimbra
   become_method: sudo
+  when: not is_master_ldap
 
 - name: (POSTINSTALL) Enable multi-master LDAP replication (zmldapenable-mmr)
-  command: "{{ install_dir }}/libexec/zmldapenable-mmr -s {{ ldap_rid }} -m "ldap://{{ hostvars['{{ inventory_hostname }}'] }}:389/\""
+  command: "{{ install_dir }}/libexec/zmldapenable-mmr -s {{ ldap_rid }} -m \"ldap://{{ hostvars[inventory_hostname]['ansible_fqdn'] }}:389/\""
   become: yes
   become_user: zimbra
   become_method: sudo
 
 - name: (POSTINSTALL) Enable multi-master LDAP replication (local config)
-  command: /opt/zimbra/bin/zmlocalconfig -e ldap_master_url=\"{{ ldap_master_url }}\" ldap_url=\"{{ ldap_url }}\""
+  command: "{{ install_dir }}/bin/zmlocalconfig -e ldap_master_url=\"{{ ldap_master_url }}\" ldap_url=\"{{ ldap_url }}\""
   become: yes
   become_user: zimbra
   become_method: sudo
