--- a/emailops-build/roles/build-zimbra/vars/main.yml
+++ b/emailops-build/roles/build-zimbra/vars/main.yml
@@ -27,7 +27,7 @@ zimbra_major_version: 8
 ##
 admin_address: "admin@{{ client_name }}.{{ datacenter }}.synacor.com"
 ldap_host: "ldap01.{{ client_name }}.{{ datacenter }}.synacor.com"
-ldap_url: "ldap://ldap01.{{ client_name }}.{{ datacenter }}.synacor.com:389/"
+ldap_master_url: "ldap://ldap01.{{ client_name }}.{{ datacenter }}.synacor.com:389/ ldap://ldap02.{{ client_name }}.{{ datacenter }}.synacor.com:389/"
 is_multimaster: TRUE
 
 ##
