--- a/emailops-build/roles/build-zimbra/handlers/main.yml
+++ b/emailops-build/roles/build-zimbra/handlers/main.yml
@@ -16,7 +16,7 @@
     port="{{ jabber_port }}"
     password="{{ jabber_pass }}"
     to="{{ jabber_to }}"
-    msg="{{ build_type }} build complete for {{ client }} on {{ hostvars['{{ inventory_hostname }}'] }}"
+    msg="{{ build_type }} build complete for {{ client_name }} on {{ hostvars[inventory_hostname]['ansible_fqdn'] }}"
 
 - name: maildrop-build-complete
   jabber:
@@ -25,7 +25,7 @@
     port="{{ jabber_port }}"
     password="{{ jabber_pass }}"
     to="{{ jabber_to }}"
-    msg="{{ build_type }} build complete for {{ client }} on {{ hostvars['{{ inventory_hostname }}'] }}"
+    msg="{{ build_type }} build complete for {{ client_name }} on {{ hostvars[inventory_hostname]['ansible_fqdn'] }}"
 
 - name: pop-build-complete
   jabber:
@@ -34,4 +34,5 @@
     port="{{ jabber_port }}"
     password="{{ jabber_pass }}"
     to="{{ jabber_to }}"
-    msg="{{ build_type }} build complete for {{ client }} on {{ hostvars['{{ inventory_hostname }}'] }}"
+    msg="{{ build_type }} build complete for {{ client_name }} on {{ hostvars[inventory_hostname]['ansible_fqdn'] }}"
+
