--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -34,10 +34,10 @@ timeout                         = 10
 vars_plugins                    = /usr/lib/python2.7/site-packages/ansible/runner/vars_plugins
 
 [privilege_escalation]
-become                          = True
+become                          = False
 become_method                   = sudo
-become_user                     = root
-become_ask_pass                 = True
+become_user                     =
+become_ask_pass                 = False
 
 [ssh_connection]
 ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s -qt
