--- a/distributeProfile/roles/installProfile/vars/main.yml
+++ b/distributeProfile/roles/installProfile/vars/main.yml
@@ -1,3 +1,7 @@
+#======  ANSIBLE  ============================================================
+#          NAME:  vars/main.yml
+#   DESCRIPTION:  Variables utilized by this play
+#==============================================================================
 ---
 ## local vars
 username: khuntly
