--- a/distributeProfile/roles/installProfile/handlers/main.yml
+++ b/distributeProfile/roles/installProfile/handlers/main.yml
@@ -1,3 +1,7 @@
+#======  ANSIBLE  ============================================================
+#          NAME:  handlers/main.yml
+#   DESCRIPTION:  Handles installation of dotfiles after sync
+#==============================================================================
 ---
 - name: install
   command: "{{ remote_home }}/.dotfiles/bin/install"
