--- a/distributeProfile/roles/installProfile/tasks/update-config.yml
+++ b/distributeProfile/roles/installProfile/tasks/update-config.yml
@@ -1,6 +1,6 @@
 #======  ANSIBLE  ============================================================
-#          NAME:  rotateLogsByTime
-#   DESCRIPTION:  Rotates log files based on size or time.
+#          NAME:  tasks/update-config.yml
+#   DESCRIPTION:  Apply updates to template configurations and deploy
 #==============================================================================
 ---
 - name: Create ~/.etc/SecurityService/config/
