--- a/distributeProfile/site.yml
+++ b/distributeProfile/site.yml
@@ -1,3 +1,8 @@
+#======  ANSIBLE  ============================================================
+#          NAME:  site.yml
+#   DESCRIPTION:  Entry point for playbook
+#==============================================================================
+---
 - hosts: all
   gather_facts: false
   roles:
