--- a/emailops-build/roles/build-zimbra/tasks/common/globalconfig.yml
+++ b/emailops-build/roles/build-zimbra/tasks/common/globalconfig.yml
@@ -7,16 +7,16 @@
 ## global config
 ##
 - name: (POSTINSTALL) Apply Zimbra configuration (global config)
-  command: "{{ install_dir }}/bin/zmprov mcf 'zimbraHttpDebugHandlerEnabled FALSE zimbraRedoLogDeleteOnRollover TRUE zimbraVersionCheckInterval 0 zimbraVersionCheckSendNotifications FALSE
+  command: "{{ install_dir }}/bin/zmprov mcf zimbraHttpDebugHandlerEnabled FALSE zimbraRedoLogDeleteOnRollover TRUE zimbraVersionCheckInterval 0 zimbraVersionCheckSendNotifications FALSE
     zimbraLmtpNumThreads 250 zimbraHttpNumThreads 500 zimbraImapNumThreads 600 zimbraPop3NumThreads 600 zimbraImapMaxRequestSize 10240 zimbraImapMaxConnections 600
-    zimbraReverseProxySSLCiphers {{ include_ciphers }} +zimbraAccountExtraObjectClass synacorEmailAccount +zimbraAccountExtraObjectClass synacorPortalAccount +zimbraDomainExtraObjectClass
-    synacorEmailDomain +zimbraDomainExtraObjectClass synacorPortalDomain +zimbraCosExtraObjectClass synacorEmailCOS'"
+    zimbraReverseProxySSLCiphers '{{ include_ciphers }}' +zimbraAccountExtraObjectClass synacorEmailAccount +zimbraAccountExtraObjectClass synacorPortalAccount +zimbraDomainExtraObjectClass
+    synacorEmailDomain +zimbraDomainExtraObjectClass synacorPortalDomain +zimbraCosExtraObjectClass synacorEmailCOS"
   become: yes
   become_user: zimbra
   become_method: sudo
 
 - name: (POSTINSTALL) Update exclude cipher list (global config)
-  command: "{{ install_dir }}/bin/zmprov mcf 'zimbraReverseProxySSLCiphers +{{ item }}'"
+  command: "{{ install_dir }}/bin/zmprov mcf zimbraReverseProxySSLCiphers +{{ item }}"
   become: yes
   become_user: zimbra
   become_method: sudo
