removed echo and die statements, lolz.

--- a/emailops-build/group_vars/all/main.yml
+++ b/emailops-build/group_vars/all/main.yml
@@ -22,6 +22,11 @@ datacenter: dev.opal
 tmpdir: /var/tmp
 
 ##
+## LDAP
+##
+ldap_host: "ldap01.{{ client_name }}.{{ datacenter }}.synacor.com"
+
+##
 ## ssl
 ##
 exclude_ciphers:
