--- a/emailops-build/roles/build-ecelerity/tasks/run-installation.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/run-installation.yml
@@ -34,3 +34,6 @@
 - name: Process installation
   command: "{{ tmpdir }}/ecelerity/installer --option-file {{ tmpdir }}/ecelerity/mta"
   when: is_smtp or is_mx
+
+- name: Synchronize puppet post-install
+  command: /usr/sbin/puppet agent -t
