--- a/emailops-build/group_vars/all/main.yml
+++ b/emailops-build/group_vars/all/main.yml
@@ -19,6 +19,11 @@ datacenter: dev.opal
 ##
 ## Installation data
 ##
+base_packages:
+  - name: nc
+  - name: "zimbra-core-{{ pkg_version }}.{{ hostvars[inventory_hostname]['ansible_architecture'] }}"
+  - name: "meta-zimbra-baseline-1.0.3-1.noarch"
+
 tmpdir: /var/tmp
 
 ##
