--- a/emailops-build/roles/build-ecelerity/tasks/main.yml
+++ b/emailops-build/roles/build-ecelerity/tasks/main.yml
@@ -5,14 +5,11 @@
 ---
 - name: Run ecelerity installation steps (ecmgr)
   include: run-installation.yml
+  vars_files:
+    - ecmgr.yml
   notify:
     - sync-puppet
     - restart-service
-    - ecmgr-build-complete
-  notify:
-    - sync-puppet
-    - restart-service
-    - ecelerity-build-complete
   when: is_ecmgr
 
 - name: Run ecelerity installation steps (mx)
@@ -22,7 +19,6 @@
   notify:
     - sync-puppet
     - restart-service
-    - ecelerity-build-complete
   when: is_mx
 
 - name: Run ecelerity installation steps (smtp)
@@ -32,7 +28,6 @@
   notify:
     - sync-puppet
     - restart-service
-    - ecelerity-build-complete
   when: is_smtp
 
 - name: Remove installer options file (ecmgr)
