--- a/emailops-build/roles/build-nginx/tasks/main.yml
+++ b/emailops-build/roles/build-nginx/tasks/main.yml
@@ -5,10 +5,11 @@
 ---
 - name: Run nginx installation steps
   include: run-installation.yml
+  notify:
+    - sync-puppet
 
 - name: Run nginx installation steps
   include: run-postinstall.yml
   notify:
     - sync-puppet
     - restart-service
-    - nginx-build-complete
