--- a/emailops-build/roles/build-zimbra/tasks/common/localconfig.yml
+++ b/emailops-build/roles/build-zimbra/tasks/common/localconfig.yml
@@ -11,9 +11,6 @@
     mailboxd_java_options=\"{{ mailboxd_java_options }}\" zimbra_require_interprocess_security=0 ldap_connect_pool_timeout=30000 ldap_connect_pool_debug=TRUE
     ldap_starttls_supported=0 ldap_starttls_required=FALSE ldap_common_require_tls=0 zmmtaconfig_enable_config_restarts=FALSE zmdbintegrityreport_disabled=TRUE
     zimbra_mysql_connector_maxActive=200 smtp_destination=\"{{ email_dest }}\""
-  become: yes
-  become_user: zimbra
-  become_method: sudo
 
 ##
 ## fix permissions on localconfig
@@ -24,3 +21,10 @@
     mode="600"
     owner="{{ file_owner }}"
     path="{{ install_dir }}/conf/localconfig.xml"
+
+##
+## Throw a restart to ensure the localconfig changes take effect
+##
+- command: /bin/true
+  notify:
+    - restart service
