--- a/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
+++ b/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
@@ -8,29 +8,14 @@
 ##
 - name: (POSTINSTALL) Promote node to master
   command: "{{ install_dir }}/libexec/zmldappromote-replica-mmr -s {{ ldap_rid }}"
-  become: yes
-  become_user: zimbra
-  become_method: sudo
   when: not is_master_ldap
 
 - name: (POSTINSTALL) Enable multi-master LDAP replication (zmldapenable-mmr)
   command: "{{ install_dir }}/libexec/zmldapenable-mmr -s {{ ldap_rid }} -m \"ldap://{{ hostvars[inventory_hostname]['ansible_fqdn'] }}:389/\""
-  become: yes
-  become_user: zimbra
-  become_method: sudo
 
 - name: (POSTINSTALL) Enable multi-master LDAP replication (local config)
   command: "{{ install_dir }}/bin/zmlocalconfig -e ldap_master_url=\"{{ ldap_master_url }}\" ldap_url=\"{{ ldap_url }}\""
-  become: yes
-  become_user: zimbra
-  become_method: sudo
 
-- name: Stop LDAP services
-  command: "{{ install_dir }}/bin/ldap stop"
-
-- name: Pause for 30 seconds to allow completion
-  pause:
-    seconds=30
-
-- name: Start LDAP after change
-  command: "{{ install_dir }}/bin/ldap start"
+- command: /bin/true
+  notify:
+    - restart ldap
