--- a/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/scality.yml
@@ -7,20 +7,16 @@
 ## Make Zimbra scality-aware (z7)
 ##
 - name: (POSTINSTALL) Restart scality-srestd services
-  command: /sbin/service scality-srestd restart
+  service:
+    name=scality-srestd
+    status=restarted
   when: zimbra_major_version == 7
-
-- name: Pause to wait for completion
-  pause:
-    seconds=30
 
 - name: (POSTINSTALL) Restart lighttpd services
-  command: /sbin/service lighttpd restart
+  service:
+    name=lighttpd
+    state=restarted
   when: zimbra_major_version == 7
-
-- name: Pause to wait for completion
-  pause:
-    seconds=30
 
 - name: (POSTINSTALL) Verify scality is running
   command: curl -0 -X HEAD http://localhost:81/srestd.fcgi?09E195C180884F7F2181FB639B5ED5066BCF8C30 -v
@@ -45,9 +41,6 @@
 - name: (POSTINSTALL) List modifiable tables
   command: "{{ install_dir }}/bin/mysql -N -e \"show databases like 'mboxgroup%'\""
   register: mboxgroup
-  become: yes
-  become_user: zimbra
-  become_method: sudo
   when: patch_count == 0
 
 - name: (POSTINSTALL) Apply SQL fix as necessary
@@ -55,9 +48,6 @@
     alter table {{ item }}.mail_item modify volume_id VARCHAR(40);
     alter table {{ item }}.revision modify volume_id VARCHAR(40)\""
   with_items: mboxgroup.stdout_lines
-  become: yes
-  become_user: zimbra
-  become_method: sudo
   when: patch_count == 0
 
 ##
@@ -66,23 +56,14 @@
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (local config)
   command: "{{ install_dir }}/bin/zmlocalconfig -e zimbra_class_store=com.scality.zimbra.cs.store.ScalitySproxydStoreManager
     external_store_local_cache_max_files=25000 external_store_local_cache_max_bytes=21474836480"
-  become: yes
-  become_user: zimbra
-  become_method: sudo
   when: zimbra_major_version == 8
 
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (server config)
   command: "{{ install_dir }}/bin/zmprov ms {{ hostvars['{{ inventory_hostname }}'] }} zimbraMessageCacheSize 10000 zimbraMailFileDecommandorCacheSize 20000 -zimbraBackupSkipBlobs TRUE
     -zimbraBackupSkipBlobs FALSE -zimbraBackupSkipHsmBlobs TRUE -zimbraBackupSkipHsmBlobs FALSE -zimbraMailboxMoveSkipBlobs TRUE -zimbraMailboxMoveSkipBlobs FALSE -zimbraMailboxMoveSkipHsmBlobs TRUE
     -zimbraMailboxMoveSkipHsmBlobs FALSE"
-  become: yes
-  become_user: zimbra
-  become_method: sudo
   when: zimbra_major_version == 8
 
 - name: (POSTINSTALL) Configuring Zimbra for Scality use (global config)
   command: "{{ install_dir }}/bin/zmprov mcf zimbraBackupSkipBlobs TRUE zimbraBackupSkipHsmBlobs TRUE zimbraMailboxMoveSkipBlobs TRUE zimbraMailboxMoveSkipHsmBlobs
     zimbraMailEmptyFolderBatchSize 100 zimbraMailPurgeBatchSize 100"
-  become: yes
-  become_user: zimbra
-  become_method: sudo
