--- a/emailops-build/roles/build-zimbra/tasks/run-installation.yml
+++ b/emailops-build/roles/build-zimbra/tasks/run-installation.yml
@@ -42,76 +42,23 @@
     name="meta-zimbra-baseline-1.0.3-1.noarch"
     state=present
 
-- name: Include LDAP installation tasks
+- name: (INSTALL) Include LDAP installation tasks
   include: ldap/install.yml
   when: is_ldap
 
-- name: Include maildrop installation tasks
+- name: (INSTALL) Include maildrop installation tasks
   include: maildrop/install.yml
   when: is_maildrop
 
-- name: Include POP installation tasks
+- name: (INSTALL) Include POP installation tasks
   include: pop/install.yml
   when: is_pop
 
-- name: (INSTALL) Create resource file for unattended installation
-  template:
-    src=unattended.j2
-    dest="{{ install_dir }}/conf/unattended.conf"
-    owner="{{ file_owner }}"
-    group="{{ group_owner }}"
-    mode=0644
-
-- name: Run zmsetup with unattended file
-  include: run-zmsetup.yml
-
-##
-## Restart services
-##
-- name: (INSTALL => POSTINSTALL) Stop LDAP services
-  command: /opt/zimbra/bin/ldap stop
-  become: yes
-  become_user: zimbra
-  become_method: sudo
-
-- name: Pause for 30 seconds to allow completion
-  pause:
-    seconds=30
-
-- name: Kill any remaining slapd processes
-  command: /usr/bin/pkill slapd
+- command: /bin/true
+  notify:
+    - sync puppet
+    - restart service
   ignore_errors: yes
-
-- name: (INSTALL => POSTINSTALL) Stop Zimbra
-  command: /opt/zimbra/bin/zmcontrol stop
-  become: yes
-  become_user: zimbra
-  become_method: sudo
-  ignore_errors: yes
-
-- name: Pause for 30 seconds to allow completion
-  pause:
-    seconds=30
-
-- name: Kill any remaining Zimbra processes
-  command: /usr/bin/killall -u zimbra
-  ignore_errors: yes
-
-- name: (INSTALL => POSTINSTALL) Start LDAP services
-  command: /opt/zimbra/bin/ldap start
-  become: yes
-  become_user: zimbra
-  become_method: sudo
-
-- name: Pause for 30 seconds to allow completion
-  pause:
-    seconds=30
-
-- name: (INSTALL => POSTINSTALL) Restart Zimbra
-  command: /opt/zimbra/bin/zmcontrol start
-  become: yes
-  become_user: zimbra
-  become_method: sudo
 
 ##
 ## INSTALLATION COMPLETE
